--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,9 @@
 .is-active {
   display: initial;
 }
+.is-active span {
+  color: #1c51a6;
+}
 
 .cent {
   display: block;
@@ -84,14 +87,13 @@
   box-shadow: 0 10px 16px rgba(0, 0, 0, 0.13), 0 6px 6px rgba(0, 0, 0, 0.19);
 }
 
-
 .has-same-height .card {
   height: 350px;
   overflow: hidden;
 }
 
 .skills-content .media + .media {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 .skills-content .progress {
@@ -103,8 +105,8 @@
 }
 
 .info-tiles {
-  margin: .75rem auto;
-  padding: 0 .75rem;
+  margin: 0.75rem auto;
+  padding: 0 0.75rem;
 }
 
 .button.is-primary.is-alt {
@@ -118,7 +120,7 @@
 .post {
   margin: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #E6EAEE;
+  border-bottom: 1px solid #e6eaee;
 }
 .post:last-child {
   padding-bottom: 0;
@@ -126,9 +128,8 @@
 }
 
 .forum-list li {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
-
 
 @media screen and (max-width: 1087px) {
   .navbar-menu {
@@ -175,4 +176,87 @@ li {
   width: 40px;
   height: 40px;
   background-size: contain;
+}
+
+a {
+  color: #1c51a6;
+}
+
+.is-contrast-danger {
+  color: #ad0023;
+}
+
+.is-contrast-success {
+  color: #0f612c;
+}
+
+.tag.is-contrast-danger {
+  background-color: #ad0023;
+  color: #fff;
+}
+
+.tag.is-contrast-success {
+  background-color: #0f612c;
+  color: #fff;
+}
+
+.tag.is-contrast-primary {
+  background-color: #004d40;
+  color: #fff;
+}
+
+fieldset {
+  border: none;
+}
+
+*:focus {
+  outline: 2px solid blue !important;
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  /* clip-path: inset(50%); */
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.visually-hidden:focus {
+  height: auto;
+  width: auto;
+  clip: auto;
+  color: #fff;
+  background-color: #ff0000;
+  padding: 5px;
+}
+
+.skip-link {
+  position: absolute;
+  height: auto;
+  width: auto;
+  padding: 8px;
+  left: 25%;
+  color: #fff;
+  background-color: #ff0000;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+.skip-link:focus {
+  transform: translateY(0%);
+}
+
+.my-button-footer {
+  border: none;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  box-sizing: inherit;
+  cursor: pointer;
+  text-decoration: none;
+  color: #1c51a6;
+  background-color: #fff;
+  padding: 0.75rem;
+  border-right: 1px solid #dbdbdb;
 }
