--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,68 @@ li {
   height: 40px;
   background-size: contain;
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0,0,0,0);
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  padding: 0;
+  border: 0;
+}
+
+.visually-hidden:focus {
+  clip: auto;
+  height: auto;
+  width: auto;
+}
+
+.control button:focus,
+.control input:focus,
+.control select:focus,
+.control textarea:focus {
+  box-shadow: none !important;
+  border: 2px solid #007eff;
+}
+.button.is-info {
+  background-color: rgb(27, 91, 131);
+}
+.title:not(.is-spaced)+.subtitle {
+  color: #262626;
+}
+
+.hero.is-info .title {
+  color: #000000;
+}
+
+.tabs.is-boxed.is-centered.main-menu .is-active span {
+  color: #595959;
+}
+
+.tag:not(body).is-danger {
+  background-color: #FF6685;
+  color: #000000;
+}
+
+.tag.is-primary.is-medium {
+  color: #000000;
+}
+.tag.is-success.is-medium {
+  color: #1C1C1C;
+}
+.has-text-grey-light {
+  color: #383838!important;
+}
+.help.is-success {
+  color: #0C5526;
+}
+.help.is-danger {
+  color: #99001F;
+}
+.footer ul li a  {
+  color: #1A4A99;
+}
+.footer .soc + p a {
+  color: #1A4A99;
+}
